hybrid-cloud-demo/HybridCloudDemo-aws-vpn-template-1787412965002.yaml
---
Metadata:
  AWSToolsMetrics:
    IaC_Generator: "arn:aws:cloudformation:us-east-1:730335582767:generatedTemplate/959e1d3a-a7dd-4ac8-a417-caa42d3c516c"
Parameters:
  KeyName:
    Default: "hybridvpn"
    Type: "String"
    Description: "Name of an existing EC2 KeyPair to enable SSH access"
Resources:
  EC2RouteHr:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-054fb1f2421a2aa64"
      DestinationCidrBlock: "10.10.0.0/16"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2CustomerGateway:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::CustomerGateway"
    DeletionPolicy: "Retain"
    Properties:
      Type: "ipsec.1"
      IpAddress: "20.244.73.198"
      BgpAsn: 65515
      Tags:
      - Value: "HybridCloudDemo"
        Key: "Project"
      - Value: "azure-customer-gateway-1"
        Key: "Name"
  EC2Instance:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Instance"
    DeletionPolicy: "Retain"
    Properties:
      Tenancy: "default"
      PrivateIpAddress: "10.10.0.36"
      MetadataOptions:
        HttpPutResponseHopLimit: 2
        HttpProtocolIpv6: "disabled"
        HttpTokens: "required"
        InstanceMetadataTags: "disabled"
        HttpEndpoint: "enabled"
      InstanceInitiatedShutdownBehavior: "stop"
      BlockDeviceMappings:
      - Ebs:
          SnapshotId: "snap-0bc9cf3f9e4893b60"
          VolumeType: "gp3"
          Iops: 3000
          VolumeSize: 8
          Encrypted: false
          DeleteOnTermination: true
        DeviceName: "/dev/xvda"
      PrivateDnsNameOptions:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      SecurityGroupIds:
      - "sg-0754cebbf02075cce"
      EbsOptimized: true
      DisableApiTermination: false
      SourceDestCheck: true
      PlacementGroupName: ""
      NetworkInterfaces:
      - Ipv6Addresses: []
        SecondaryPrivateIpAddressCount: 0
        NetworkInterfaceId: "eni-08428341dc282f1bf"
        DeviceIndex: "0"
      ImageId: "ami-0332d564d76dbd8d6"
      InstanceType: "t3.micro"
      Monitoring: false
      Tags:
      - Value: "HybridCloudDemo"
        Key: "Project"
      - Value: "aws-vm"
        Key: "Name"
      CreditSpecification:
        CPUCredits: "unlimited"
  EC2VPNConnection:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPNConnection"
    DeletionPolicy: "Retain"
    Properties:
      EnableAcceleration: false
      Type: "ipsec.1"
      RemoteIpv4NetworkCidr: "0.0.0.0/0"
      VpnTunnelOptionsSpecifications:
      - Phase2EncryptionAlgorithms:
        - Value: "AES128"
        - Value: "AES256"
        - Value: "AES128-GCM-16"
        - Value: "AES256-GCM-16"
        Phase2DHGroupNumbers:
        - Value: 2
        - Value: 5
        - Value: 14
        - Value: 15
        - Value: 16
        - Value: 17
        - Value: 18
        - Value: 19
        - Value: 20
        - Value: 21
        - Value: 22
        - Value: 23
        - Value: 24
        StartupAction: "start"
        TunnelInsideCidr: "169.254.21.100/30"
        IKEVersions:
        - Value: "ikev1"
        - Value: "ikev2"
        LogOptions:
          CloudwatchLogOptions:
            BgpLogEnabled: false
            LogEnabled: false
        Phase1DHGroupNumbers:
        - Value: 2
        - Value: 14
        - Value: 15
        - Value: 16
        - Value: 17
        - Value: 18
        - Value: 19
        - Value: 20
        - Value: 21
        - Value: 22
        - Value: 23
        - Value: 24
        ReplayWindowSize: 1024
        EnableTunnelLifecycleControl: false
        RekeyMarginTimeSeconds: 270
        DPDTimeoutAction: "clear"
        Phase2LifetimeSeconds: 3600
        Phase2IntegrityAlgorithms:
        - Value: "SHA1"
        - Value: "SHA2-256"
        - Value: "SHA2-384"
        - Value: "SHA2-512"
        Phase1IntegrityAlgorithms:
        - Value: "SHA1"
        - Value: "SHA2-256"
        - Value: "SHA2-384"
        - Value: "SHA2-512"
        Phase1LifetimeSeconds: 28800
        RekeyFuzzPercentage: 100
        Phase1EncryptionAlgorithms:
        - Value: "AES128"
        - Value: "AES256"
        - Value: "AES128-GCM-16"
        - Value: "AES256-GCM-16"
        DPDTimeoutSeconds: 30
      - Phase2EncryptionAlgorithms:
        - Value: "AES128"
        - Value: "AES256"
        - Value: "AES128-GCM-16"
        - Value: "AES256-GCM-16"
        Phase2DHGroupNumbers:
        - Value: 2
        - Value: 5
        - Value: 14
        - Value: 15
        - Value: 16
        - Value: 17
        - Value: 18
        - Value: 19
        - Value: 20
        - Value: 21
        - Value: 22
        - Value: 23
        - Value: 24
        StartupAction: "start"
        TunnelInsideCidr: "169.254.22.100/30"
        IKEVersions:
        - Value: "ikev1"
        - Value: "ikev2"
        LogOptions:
          CloudwatchLogOptions:
            BgpLogEnabled: false
            LogEnabled: false
        Phase1DHGroupNumbers:
        - Value: 2
        - Value: 14
        - Value: 15
        - Value: 16
        - Value: 17
        - Value: 18
        - Value: 19
        - Value: 20
        - Value: 21
        - Value: 22
        - Value: 23
        - Value: 24
        ReplayWindowSize: 1024
        EnableTunnelLifecycleControl: false
        RekeyMarginTimeSeconds: 270
        DPDTimeoutAction: "clear"
        Phase2LifetimeSeconds: 3600
        Phase2IntegrityAlgorithms:
        - Value: "SHA1"
        - Value: "SHA2-256"
        - Value: "SHA2-384"
        - Value: "SHA2-512"
        Phase1IntegrityAlgorithms:
        - Value: "SHA1"
        - Value: "SHA2-256"
        - Value: "SHA2-384"
        - Value: "SHA2-512"
        Phase1LifetimeSeconds: 28800
        RekeyFuzzPercentage: 100
        Phase1EncryptionAlgorithms:
        - Value: "AES128"
        - Value: "AES256"
        - Value: "AES128-GCM-16"
        - Value: "AES256-GCM-16"
        DPDTimeoutSeconds: 30
      TunnelBandwidth: "standard"
      CustomerGatewayId: "cgw-0b73c2ae8e7b84c02"
      LocalIpv4NetworkCidr: "0.0.0.0/0"
      VpnGatewayId: "vgw-0b2ad658b4484e8fe"
      OutsideIpAddressType: "PublicIpv4"
      StaticRoutesOnly: false
      TunnelInsideIpVersion: "ipv4"
      Tags:
      - Value: "HybridCloudDemo"
        Key: "Project"
      - Value: "aws-azure-vpn-connection-1"
        Key: "Name"
  EC2Volume:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Volume"
    DeletionPolicy: "Retain"
    Properties:
      MultiAttachEnabled: false
      SnapshotId: "snap-0bc9cf3f9e4893b60"
      VolumeType: "gp3"
      Encrypted: false
      Size: 8
      AutoEnableIO: true
      AvailabilityZoneId: "use1-az1"
      AvailabilityZone: "us-east-1a"
      Throughput: 125
      Iops: 3000
      Tags: []
  EC2Subnet:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Subnet"
    DeletionPolicy: "Retain"
    Properties:
      MapPublicIpOnLaunch: false
      EnableDns64: false
      VpcId: "vpc-03e203fd2ee0f49c0"
      AvailabilityZoneId: "use1-az1"
      PrivateDnsNameOptionsOnLaunch:
        EnableResourceNameDnsARecord: false
        HostnameType: "ip-name"
        EnableResourceNameDnsAAAARecord: false
      AvailabilityZone: "us-east-1a"
      CidrBlock: "10.10.0.0/24"
      Ipv6Native: false
      Tags:
      - Value: "HybridCloudDemo"
        Key: "Project"
      - Value: "aws-private-subnet-1"
        Key: "Name"
  EC2DHCPOptions:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::DHCPOptions"
    DeletionPolicy: "Retain"
    Properties:
      DomainName: "ec2.internal"
      DomainNameServers:
      - "AmazonProvidedDNS"
      Tags: []
  EC2SecurityGroup:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "default VPC security group"
      GroupName: "default"
      VpcId: "vpc-03e203fd2ee0f49c0"
      SecurityGroupIngress:
      - SourceSecurityGroupId: "sg-050e711e13e922277"
        IpProtocol: "-1"
        SourceSecurityGroupOwnerId: "730335582767"
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
  EC2Route:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::Route"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-004377a1a0b980fc0"
      DestinationCidrBlock: "10.10.0.0/16"
      GatewayId: "local"
      VpcEndpointId: "local"
  EC2SubnetNetworkAclAssociation:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetNetworkAclAssociation"
    DeletionPolicy: "Retain"
    Properties:
      NetworkAclId: "acl-0cbc101136c32cfb6"
      SubnetId: "subnet-00761f16da9e96270"
  EC2SecurityGroupQ7:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SecurityGroup"
    DeletionPolicy: "Retain"
    Properties:
      GroupDescription: "aws-vm-sg created 2026-08-22T14:49:04.503Z"
      GroupName: "aws-vm-sg"
      VpcId: "vpc-03e203fd2ee0f49c0"
      SecurityGroupIngress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "tcp"
        FromPort: 22
        ToPort: 22
      - CidrIp: "10.20.0.0/16"
        IpProtocol: "icmp"
        FromPort: -1
        ToPort: -1
      SecurityGroupEgress:
      - CidrIp: "0.0.0.0/0"
        IpProtocol: "-1"
  EC2VPCCidrBlock:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPCCidrBlock"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-03e203fd2ee0f49c0"
      CidrBlock: "10.10.0.0/16"
  EC2VPCGatewayAttachmentVGW:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPCGatewayAttachment"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-03e203fd2ee0f49c0"
      VpnGatewayId: "vgw-0b2ad658b4484e8fe"
  EC2VPC:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPC"
    DeletionPolicy: "Retain"
    Properties:
      CidrBlock: "10.10.0.0/16"
      EnableDnsSupport: true
      InstanceTenancy: "default"
      EnableDnsHostnames: false
      Tags:
      - Value: "HybridCloudDemo"
        Key: "Project"
      - Value: "aws-network-vpc"
        Key: "Name"
  EC2VPNGateway:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPNGateway"
    DeletionPolicy: "Retain"
    Properties:
      Type: "ipsec.1"
      AmazonSideAsn: 64512
      Tags:
      - Value: "HybridCloudDemo"
        Key: "Project"
      - Value: "aws-vpn-gateway"
        Key: "Name"
  EC2VPCDHCPOptionsAssociation:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VPCDHCPOptionsAssociation"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-03e203fd2ee0f49c0"
      DhcpOptionsId: "dopt-010d582ca123acc40"
  EC2VolumeAttachment:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::VolumeAttachment"
    DeletionPolicy: "Retain"
    Properties:
      VolumeId: "vol-00dc6e9332558f0ee"
      InstanceId: "i-0dbbbb20436b5ae05"
      Device: "/dev/xvda"
      EbsCardIndex: 0
  EC2RouteTableAd:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-03e203fd2ee0f49c0"
      Tags:
      - Value: "HybridCloudDemo"
        Key: "Project"
      - Value: "aws-private-rtb"
        Key: "Name"
  ResourceGroupsGroupHybridCloudDemoRG:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::ResourceGroups::Group"
    DeletionPolicy: "Retain"
    Properties:
      Tags:
      - Value: "HybridCloudDemo"
        Key: "Project"
      ResourceQuery:
        Query:
          TagFilters:
          - Values:
            - "HybridCloudDemo"
            Key: "Project"
          ResourceTypeFilters:
          - "AWS::AllSupported"
        Type: "TAG_FILTERS_1_0"
      Name: "HybridCloudDemoRG"
  EC2RouteTable:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::RouteTable"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-03e203fd2ee0f49c0"
  EC2NetworkInterface:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkInterface"
    DeletionPolicy: "Retain"
    Properties:
      SourceDestCheck: true
      Description: ""
      PrivateIpAddresses:
      - PrivateIpAddress: "10.10.0.36"
        Primary: true
      Ipv6PrefixCount: 0
      Ipv4Prefixes: []
      Ipv4PrefixCount: 0
      GroupSet:
      - "sg-0754cebbf02075cce"
      Ipv6Prefixes: []
      SubnetId: "subnet-00761f16da9e96270"
      Tags: []
  EC2SubnetRouteTableAssociation:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::SubnetRouteTableAssociation"
    DeletionPolicy: "Retain"
    Properties:
      RouteTableId: "rtb-054fb1f2421a2aa64"
      SubnetId: "subnet-00761f16da9e96270"
  EC2NetworkAcl:
    UpdateReplacePolicy: "Retain"
    Type: "AWS::EC2::NetworkAcl"
    DeletionPolicy: "Retain"
    Properties:
      VpcId: "vpc-03e203fd2ee0f49c0"
      Tags: []
